--- a/index-dark.html
+++ b/index-dark.html
@@ -246,7 +246,7 @@
                   <h3>NBA Fortune</h3>
                   <span class="price">Description: NBA Player Stock Trading App </span> <br>
                   <span class="price">My Role: Developer / Project Manager </span> <br>
-                  <span class="price">Co-developers: Amie Deng, Brian Lin, Shane Wang</span> <br>
+<!--                   <span class="price">Co-developers: Amie Deng, Brian Lin, Shane Wang</span> <br> -->
                   <span class="price">Tool(s) that I used: Swift, Firebase, Cocoa Pods </span> <br>
                 </div>
                 <div class="carousel-wrapper">
